# swagger.json
@@ -3,7 +3,7 @@
     "info": {
         "title": "OIMED",
         "description": "Bem-vindo à documentação da API OIMED, uma plataforma que fornece acesso a recursos e serviços essenciais para serviços de telemedicina. Esta documentação foi elaborada para orientar desenvolvedores, facilitando a integração e o entendimento completo das capacidades oferecidas pela nossa API.",
-        "version": "1.0.0"
+        "version": "1.0.1"
     },
     "servers": [
         {
@@ -309,6 +309,182 @@
                         }
                     }
                 },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Error: Not Found"
+                    },
+                    "500": {
+                        "description": "Erro interno"
+                    }
+                }
+            }
+        },
+        "/beneficiaries/dependente": {
+            "post": {
+                "tags": [
+                    "Ações"
+                ],
+                "summary": "Rota para criar um dependente na base de dados",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "nm_cliente": {
+                                        "type": "string",
+                                        "description": "nome do usuario",
+                                        "example": "João Silva"
+                                    },
+                                    "nu_documento": {
+                                        "type": "string",
+                                        "description": "CPF do usuário"
+                                    },
+                                    "birthday": {
+                                        "type": "string",
+                                        "description": "data de nascimento do usuário"
+                                    },
+                                    "telefone": {
+                                        "type": "string",
+                                        "description": "telefone do usuário"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "description": "email do usuário"
+                                    },
+                                    "zip_code": {
+                                        "type": "string",
+                                        "description": "cep do usuário"
+                                    },
+                                    "address": {
+                                        "type": "string",
+                                        "description": "endereço do usuário"
+                                    },
+                                    "city": {
+                                        "type": "string",
+                                        "description": "cidade do usuário"
+                                    },
+                                    "state": {
+                                        "type": "string",
+                                        "description": "uf do usuário"
+                                    },
+                                       "cpfTitular": {
+                                        "type": "string",
+                                        "description": "cpf do titular, se for um dependente. se não for um dependente repetir o nu_documento"
+                                    }
+                                },
+                                "required": [
+                                    "nm_cliente",
+                                    "nu_documento",
+                                    "cpfTitular"
+                                ]
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "401": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Error: Not Found"
+                    },
+                    "500": {
+                        "description": "Erro interno"
+                    }
+                }
+            }
+        },
+        "/beneficiaries/edit/{cpf}": {
+            "put": {
+                "tags": [
+                    "Ações"
+                ],
+                "summary": "Rota para atualizar dados de clientes, enviar apenas os campos que deseja atualizar",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "nm_cliente": {
+                                        "type": "string",
+                                        "description": "nome do usuario",
+                                        "example": "João Silva"
+                                    },
+                                    "nu_documento": {
+                                        "type": "string",
+                                        "description": "CPF do usuário"
+                                    },
+                                    "birthday": {
+                                        "type": "string",
+                                        "description": "data de nascimento do usuário"
+                                    },
+                                    "telefone": {
+                                        "type": "string",
+                                        "description": "telefone do usuário"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "description": "email do usuário"
+                                    },
+                                    "zip_code": {
+                                        "type": "string",
+                                        "description": "cep do usuário"
+                                    },
+                                    "address": {
+                                        "type": "string",
+                                        "description": "endereço do usuário"
+                                    },
+                                    "city": {
+                                        "type": "string",
+                                        "description": "cidade do usuário"
+                                    },
+                                    "state": {
+                                        "type": "string",
+                                        "description": "uf do usuário"
+                                    }
+                                },
+                                "required": [
+                                    "api_key",
+                                    "secret_key"
+                                ]
+                            }
+                        }
+                    }
+                },
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "cpf",
+                        "type": "string",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "description": "cpf do cliente (Apenas numeros)",
+                            "default": "12345678910"
+                        }
+                    }
+                ],
                 "security": [
                     {
                         "bearerAuth": []
